--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -94,32 +94,32 @@
 
 <p>The <abbr title="Canada Revenue Agency">CRA</abbr> conducts a monthly top task exit survey to find out more about how citizens use their digital services. It asks people who come to <abbr title="Canada Revenue Agency">CRA</abbr> pages what they were trying to do and whether they were successful. “File a <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> return” and “Calculate payroll deductions” are consistent top tasks.  </p>
 
-<p>Web traffic data showed that the pages for calculating payroll deductions and reporting payroll got over 4.2 million visits in 2017. The topic of GST/HST returns had over 1.3 million visits. Over 88% of people do these tasks on desktop or laptop computers, not mobile devices. This was helpful input for our test planning. </p>
+<p>Web traffic data showed that the pages for calculating payroll deductions and reporting payroll got over 4.2 million visits in 2017. The topic of <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> returns had over 1.3 million visits. Over 88% of people do these tasks on desktop or laptop computers, not mobile devices. This was helpful input for our test planning. </p>
 
-<p>We analyzed the readability levels of the GST/HST and Payroll pages. Analysis confirmed quantitatively what people know intuitively: web pages about tax obligations are quite hard to read. About 24% of the text on key GST/HST and payroll pages used long sentences, and 17% was written in passive language. The Canada.ca Content Style Guide and plain language experts recommend using short sentences and writing in the active voice. </p>
+<p>We analyzed the readability levels of the <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and Payroll pages. Analysis confirmed quantitatively what people know intuitively: web pages about tax obligations are quite hard to read. About 24% of the text on key <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and payroll pages used long sentences, and 17% was written in passive language. The Canada.ca Content Style Guide and plain language experts recommend using short sentences and writing in the active voice. </p>
 
 <p>We were starting to understand the issues Canadians were facing when trying to fulfill their business tax obligations online. The next step was to confirm our hypotheses with remote moderated usability testing.  </p>
 
 
 <h2>Establishing a baseline</h2>
 
-<p>To test our hypotheses, the team developed 16 possible tasks related to filing business taxes. We created a simple online survey so that CRA’s call centre agents and subject matter experts could comment on the tasks. With this input, we narrowed down the list to 10 task scenarios, confident that they were accurate and represented real issues for citizens. </p>
+<p>To test our hypotheses, the team developed 16 possible tasks related to filing business taxes. We created a simple online survey so that <abbr title="Canada Revenue Agency">CRA</abbr>’s call centre agents and subject matter experts could comment on the tasks. With this input, we narrowed down the list to 10 task scenarios, confident that they were accurate and represented real issues for citizens. </p>
 
 <!-- insert the table -->
 
-<p>We used remote moderated testing on desktop and laptop computers to establish the baseline. We tested 17 participants from across Canada (14 English and 3 French). We recruited owners of small businesses, screening for those who were self-employed or sole proprietors, without prior GST/HST or payroll experience.</p>
+<p>We used remote moderated testing on desktop and laptop computers to establish the baseline. We tested 17 participants from across Canada (14 English and 3 French). We recruited owners of small businesses, screening for those who were self-employed or sole proprietors, without prior <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> or payroll experience.</p>
 
 <p>Participants were asked to complete all 10 tasks in one hour. If they took longer than 5 minutes to complete a task, we counted that as too long to be considered successful and had them move on to the next question.</p>
 
-<p>The order of the scenarios was carefully chosen to avoid learning effects, and half the participants were given the tasks in the reverse order. Some tasks had people start on the Canada.ca home page, while others started on the CRA institution page, or on the GST/HST or Payroll topic pages on Canada.ca. An expert moderator conducted the testing.</p>
+<p>The order of the scenarios was carefully chosen to avoid learning effects, and half the participants were given the tasks in the reverse order. Some tasks had people start on the Canada.ca home page, while others started on the CRA institution page, or on the <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> or Payroll topic pages on Canada.ca. An expert moderator conducted the testing.</p>
 
-<p>During this first round of testing, we convened observation sessions to watch videos of the usability testing. These sessions provided an opportunity for people to better understand how usability testing works. The CRA experts who wrote the web pages saw real people using them, and typically found it eye-opening.</p>
+<p>During this first round of testing, we convened observation sessions to watch videos of the usability testing. These sessions provided an opportunity for people to better understand how usability testing works. The <abbr title="Canada Revenue Agency">CRA</abbr> experts who wrote the web pages saw real people using them, and typically found it eye-opening.</p>
 
 <p>The results of the baseline test showed that on average, participants could find the right information 62% of the time. However, they were only able to successfully complete the tasks 48% of the time. </p>
 
 <h2>Redesign to improve task success</h2>
 
-<p>For the prototyping phase, we divided into two working teams, one for GST/HST tasks and the other for payroll tasks. Each team combed through the baseline test report, watched more videos of participants trying to complete their tasks, and looked at the click paths — the sequences of pages that participants went to. This helped show which pages were causing people to go off the “ideal” path. Sometimes this was because the correct link wasn’t clear enough. Other times a different link was more appealing.
+<p>For the prototyping phase, we divided into two working teams, one for <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> tasks and the other for payroll tasks. Each team combed through the baseline test report, watched more videos of participants trying to complete their tasks, and looked at the click paths — the sequences of pages that participants went to. This helped show which pages were causing people to go off the “ideal” path. Sometimes this was because the correct link wasn’t clear enough. Other times a different link was more appealing.
 </p>
 
 <p>One of the primary techniques for improving citizen success was to take long pages of text, and separate sub-tasks or topics into steps. This pattern worked because it kept related information together, while allowing people to see the sequence of activities, and jump to the section that best suited their needs.
@@ -175,19 +175,19 @@ Detailed description
 			</tr></thead><tbody><tr><td>1. Payroll: Pay deductions by Interac</td>
 				<td  >59%</td>
 				<td>73%</td>
-			</tr><tr><td>2. GST: Invoice date</td>
+			</tr><tr><td>2. <abbr title="Goods and Services Tax">GST</abbr>: Invoice date</td>
 				<td  >41%</td>
 				<td>78%</td>
 			</tr><tr><td>3. Payroll: Remittance error – fine</td>
 				<td  >14%</td>
 				<td>42%</td>
-			</tr><tr><td>4. GST: Place of supply</td>
+			</tr><tr><td>4. <abbr title="Goods and Services Tax">GST</abbr>: Place of supply</td>
 				<td  >27%</td>
 				<td>67%</td>
 			</tr><tr><td>5. Payroll: Confirm cheque received</td>
 				<td  >29%</td>
 				<td>83%</td>
-			</tr><tr><td>6. GST: Instalments </td>
+			</tr><tr><td>6. <abbr title="Goods and Services Tax">GST</abbr>: Instalments </td>
 				<td  >24%</td>
 				<td>60%</td>
 			</tr><tr><td>7. Payroll: When to remit </td>
@@ -196,7 +196,7 @@ Detailed description
 			</tr><tr><td>8. Payroll: Max CPP contributions </td>
 				<td  >80%</td>
 				<td>83%</td>
-			</tr><tr><td>9. GST: Remit date (first time) </td>
+			</tr><tr><td>9. <abbr title="Goods and Services Tax">GST</abbr>: Remit date (first time) </td>
 				<td  >82%</td>
 				<td>74%</td>
 			</tr><tr><td>10. Payroll: Nil remittances </td>
@@ -215,7 +215,7 @@ Detailed description
 
 <li>Make top tasks visible: include keywords words that users are looking for and understand in doormats and labels</li>
 
-<li>Organize for the user: organize for a user moving through tasks, rather than a CRA organized structure</li>
+<li>Organize for the user: organize for a user moving through tasks, rather than a <abbr title="Canada Revenue Agency">CRA</abbr> organized structure</li>
 
 <li>Match user language: not everyone understands terminology, reduce ambiguity and include plain language definitions </li>
 
@@ -239,7 +239,7 @@ Detailed description
 <ul>
 
 <li><a href="#">See the updated XXXX pages</a> based on the new designs in this project</li>
-<li><a href="#">CRA and TBS collaborate to optimize GST/HST and Payroll webpage content</a>, a guest post by our optimization partners at CRA</li>
+<li><a href="#">CRA and TBS collaborate to optimize GST/HST and Payroll webpage content</a>, a guest post by our optimization partners at <abbr title="Canada Revenue Agency">CRA</abbr></li>
 <li><a href="https://canada-ca.github.io/pages/projectoverview.html">Read overviews of other projects</a> with our partners</li>
 
 </ul>
