--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -137,11 +137,11 @@
 Detailed description
 </summary>
 <br>
-<p>Two webpages are shown side by side. The page on the left is labelled "Baseline" and shows that the “How and when to remit source deductions” webpage on Canada.ca was extremely long when the project started.  The label text for the screen capture states: Page was too long for people to find their answer.</p>
+<p>Two webpages are shown side by side. The page on the left is labelled "Baseline" and shows that the “How and when to remit source deductions” webpage on Canada.ca was extremely long when the project started.  An arrow points to the webpage with the annotation "Page was too long for people to find their answer."</p>
 
-<p>The page on the right is labelled "Redesign” and shows the “How and when to pay (remit) source deductions” page with 5 steps: 1. Overview, 2. Due dates, 3. Make a payment (remittance) 4. Confirm payment (remittance) received and More information.  The label text for the screen capture states: Tasks grouped into steps made them easy to scan.  </p>
+<p>The page on the right is labelled "Redesign” and shows the “How and when to pay (remit) source deductions” page with 5 steps: 1. Overview, 2. Due dates, 3. Make a payment (remittance) 4. Confirm payment (remittance) received and More information.  An arrow points to the steps with the annotation "Tasks grouped into steps made them easy to scan."  </p>
 
-<p>The image shows the much simpler and shorter content of tab 3. Make a payment (remittance). At the bottom of the page is a button with the text “Make your payment”. A second label states: Buttons draw attention to the main action on the page.</p>
+<p>The image shows the much simpler and shorter content of tab 3. Make a payment (remittance). At the bottom of the page is a button with the text “Make your payment”. An arrow points to the button with the annotation "Buttons draw attention to the main action on the page."</p>
 
 <p>We also found that people who were not familiar with tax rules did not always grasp the term “remit”. They often skipped over links to pages with that content. We could not completely replace the term remit, since it has legal connotations. Instead, we chose to bridge citizen and technical terminology by using both “pay” and “remit” in links and page titles.</p>
 
