--- a/research-summaries/impots-resume-researche.html
+++ b/research-summaries/impots-resume-researche.html
@@ -143,11 +143,11 @@
 Detailed description
 </summary>
 <br>
-<p>Deux pages Web s’affichent côte à côte. La page de gauche porte la mention « Avant » et montre que la page Web « Comment et quand faire les versements de retenues à la source » du site Canada.ca était extrêmement longue au début du projet. Les étiquettes pour les captures d'écran indiquent : La page était trop longue pour que les personnes trouvent leur réponse.</p>
+<p>Deux pages Web s’affichent côte à côte. La page de gauche porte la mention « Avant » et montre que la page Web « Comment et quand faire les versements de retenues à la source » du site Canada.ca était extrêmement longue au début du projet. Une flèche pointe vers la page Web avec l'annotation « La page était trop longue pour que les personnes trouvent leur réponse ».</p>
 
-<p>La page de droite porte la mention « Après » et affiche la page « Comment et quand payer les retenues à la source (versements) » en cinq étapes : 1. Aperçu, 2 Dates d’échéance, 3 Effectuer un paiement (versement), 4 Confirmer le paiement (versement) reçu et Pour en savoir plus. L'étiquette pour la capture d'écran indique : Tâches groupées en étapes faciles à survoler. </p>
+<p>La page de droite porte la mention « Après » et affiche la page « Comment et quand payer les retenues à la source (versements) » en cinq étapes : 1. Aperçu, 2 Dates d’échéance, 3 Effectuer un paiement (versement), 4 Confirmer le paiement (versement) reçu et Pour en savoir plus. Une flèche pointe vers les étapes avec l'annotation « Tâches groupées en étapes faciles à survoler». </p>
 
-<p>L'image montre le contenu beaucoup plus court et simple de l'onglet 3. Effectuer un paiement (versement). Au bas de la page, il y a un bouton avec le texte « Faites votre paiement ». Une deuxième étiquette indique : Les boutons attirent l’attention sur l’action principale de la page.</p>
+<p>L'image montre le contenu beaucoup plus court et simple de l'onglet 3. Effectuer un paiement (versement). Au bas de la page, il y a un bouton avec le texte « Faites votre paiement ». Une flèche pointe vers le bouton avec l'annotation « Les boutons attirent l’attention sur l’action principale de la page ».</p>
 
 </details>
 
