--- a/research-summaries/impots-resume-researche.html
+++ b/research-summaries/impots-resume-researche.html
@@ -133,14 +133,14 @@
 
 <br>
 <figure>
-<img class="img-responsive" alt="Web screen capture showing the “How and when to remit source deductions” page before and after redesign. Detailed description follows." src="../images/taxes-impots/beforeafter-sourcedeductions.jpg"/>
-<figcaption><small>How and when to remit source deductions page at baseline and after redesign for validation </small></figcaption>
+<img class="img-responsive" alt="Saisie d’écran Web montrant la page « Comment et quand faire les versements de retenues à la source » avant et après le remaniement. La description détaillée suit." src="../images/taxes-impots/beforeafter-sourcedeductions.jpg"/>
+<figcaption><small>Page « Comment et quand faire les versements de retenues à la source » avant et après le remaniement aux fins de validation (en anglais)</small></figcaption>
 <br>
 
 
 <details>
 <summary>
-Detailed description
+Description détaillée
 </summary>
 <br>
 <p>Deux pages Web s’affichent côte à côte. La page de gauche porte la mention « Avant » et montre que la page Web « Comment et quand faire les versements de retenues à la source » du site Canada.ca était extrêmement longue au début du projet. Une flèche pointe vers la page Web avec l'annotation « La page était trop longue pour que les personnes trouvent leur réponse ».</p>
@@ -150,6 +150,8 @@ Detailed description
 <p>L'image montre le contenu beaucoup plus court et simple de l'onglet 3. Effectuer un paiement (versement). Au bas de la page, il y a un bouton avec le texte « Faites votre paiement ». Une flèche pointe vers le bouton avec l'annotation « Les boutons attirent l’attention sur l’action principale de la page ».</p>
 
 </details>
+
+<br>
 
 <p>Nous avons aussi constaté que les personnes qui ne connaissaient pas bien les règles fiscales ne comprenaient pas toujours le terme « versement ». Ils ont souvent sauté par-dessus les liens qui affichaient ce contenu. Nous ne pouvions pas remplacer complètement le terme « versement », puisqu’il a une connotation juridique. Nous avons plutôt fait le pont entre les termes courants et les termes techniques en utilisant à la fois « paiement » et « versement » dans les liens et les titres des pages.</p>
 
@@ -162,7 +164,7 @@ Detailed description
 
 </div>
 </div>
-<img class="img-responsive hidden-sm hidden-xs" alt="Diagramme à barres de comparaison des taux de réussite des tâches sur le site existant (initial) et le prototype remanié (validation) pour les six tâches. Les données pour chaque tâche se trouvent dans le tableau ci-dessous. Le graphique indique que les participants ont eu un taux de succès supérieur pour toutes les tâches lors des tests de validation." src="../images/taxes-impots/CRA-TF task success chart.jpg"/>
+<img class="img-responsive hidden-sm hidden-xs" alt="Diagramme à barres de comparaison des taux de réussite des tâches sur le site existant (initial) et le prototype remanié (validation) pour les six tâches. Les données pour chaque tâche se trouvent dans le tableau ci-dessous. Le graphique indique que les participants ont eu un taux de succès supérieur pour toutes les tâches lors des tests de validation." src="../images/taxes-impots/CRA-TF-task-success-chart-FR.jpg"/>
 
 <div class="row col-md-9">
 			 <details>
