--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -111,7 +111,7 @@
 
 <p>Participants were asked to complete all 10 tasks in one hour. If they took longer than 5 minutes to complete a task, we counted that as too long to be considered successful and had them move on to the next question.</p>
 
-<p>The order of the scenarios was carefully chosen to avoid learning effects, and half the participants were given the tasks in the reverse order. Some tasks had people start on the Canada.ca home page, while others started on the CRA institution page, or on the <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> or Payroll topic pages on Canada.ca. An expert moderator conducted the testing.</p>
+<p>The order of the scenarios was carefully chosen to avoid learning effects, and half the participants were given the tasks in the reverse order. Some tasks had people start on the Canada.ca home page, while others started on the <abbr title="Canada Revenue Agency">CRA</abbr> institution page, or on the <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> or Payroll topic pages on Canada.ca. An expert moderator conducted the testing.</p>
 
 <p>During this first round of testing, we convened observation sessions to watch videos of the usability testing. These sessions provided an opportunity for people to better understand how usability testing works. The <abbr title="Canada Revenue Agency">CRA</abbr> experts who wrote the web pages saw real people using them, and typically found it eye-opening.</p>
 
@@ -143,11 +143,9 @@ Detailed description
 
 <p>The image shows the much simpler and shorter content of tab 3. Make a payment (remittance). At the bottom of the page is a button with the text “Make your payment”. An arrow points to the button with the annotation "Buttons draw attention to the main action on the page."</p>
 
-<p>We also found that people who were not familiar with tax rules did not always grasp the term “remit”. They often skipped over links to pages with that content. We could not completely replace the term remit, since it has legal connotations. Instead, we chose to bridge citizen and technical terminology by using both “pay” and “remit” in links and page titles.</p>
-
-
 </details>
-
+<br>
+<p>We also found that people who were not familiar with tax rules did not always grasp the term “remit”. They often skipped over links to pages with that content. We could not completely replace the term remit, since it has legal connotations. Instead, we chose to bridge citizen and technical terminology by using both “pay” and “remit” in links and page titles.</p>
 
 <h2 id="measuring-success-rates-on-the-redesigned-prototype">Measuring success rates on the redesigned prototype</h2>
 
@@ -157,7 +155,7 @@ Detailed description
 
 </div>
 </div>
-<img class="img-responsive hidden-sm hidden-xs" alt="image-of-chart-showing-baseline-and-final-test-results" src="../images/taxes-impots/CRA-TF task success chart.jpg"/>
+<img class="img-responsive hidden-sm hidden-xs" alt="image-of-chart-showing-baseline-and-final-test-results" src="../images/taxes-impots/CRA-TF-task-success-chart.jpg"/>
 
 <div class="row col-md-9">
 			 <details>
