--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -105,7 +105,62 @@
 
 <p>To test our hypotheses, the team developed 16 possible tasks related to filing business taxes. We created a simple online survey so that <abbr title="Canada Revenue Agency">CRA</abbr>’s call centre agents and subject matter experts could comment on the tasks. With this input, we narrowed down the list to 10 task scenarios, confident that they were accurate and represented real issues for citizens. </p>
 
-<!-- insert the table -->
+<ol>
+	<li>Can you pay your company's payroll <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Employment Insurance">EI</abbr> deductions to CRA using Interac?</li>
+	<ul>
+				<li><b>Yes</b></li>
+	</ul>
+<br>
+ <li>You issued an invoice, with <abbr title="Goods and Services Tax">GST</abbr> included, on the last day of the quarter. Can you wait until the invoice is paid before sending in your payment?</li>
+ <ul>
+ 			<li><b>No (We usually consider payment to be due on the date you issue an invoice...)</b></li>
+ </ul>
+<br>
+ <li>You accidentally made an error when you submitted your last payroll return. You under-paid your source deductions to <abbr title="Canada Revenue Agency">CRA</abbr> by $350. Will you get fined?</li>
+ <ul>
+			 <li><b>No because it was less than $500 and you didn't knowingly or under circumstances of gross negligence, fail to remit it</b></li>
+ </ul>
+<br>
+ <li>If your Ontario company sells and ships a taxable product to a customer in Alberta, do you charge them <abbr title="Goods and Services Tax">GST</abbr> or <abbr title="Harmonized Sales Tax">HST</abbr>?</li>
+ <ul>
+			<li><b><abbr title="Goods and Services Tax">GST</abbr> (5%) only. Reason: Alberta does not charge <abbr title="Harmonized Sales Tax">HST</abbr></b></li>
+ </ul>
+<br>
+ <li>You mailed a cheque to pay your company’s payroll deductions. How would you confirm that the <abbr title="Canada Revenue Agency">CRA</abbr> received it?</li>
+ <ul>
+			<li><b>Access account balance through My Business Account OR Represent a Client OR wait for Statement of Account</b></li>
+ </ul>
+<br>
+ <li>
+You registered for <abbr title="Goods and Services Tax">GST</abbr> for the first time on August 31, and will file your return annually. Your fiscal year ended October 31. Your net tax for September and October was $2,500. Will you need to pay your <abbr title="Goods and Services Tax">GST</abbr> in instalments for the next fiscal year?
+</li>
+ <ul>
+			<li><b>Yes (>$3000)</b></li>
+ </ul>
+<br>
+ <li>
+A business collects taxes from its employees’ pay. It sends the taxes it has collected to the government 4 times a year. When must it send the next payment by?
+</li>
+ <ul>
+			<li><b>April 15 because the test was conducted between January and March</b></li>
+ </ul>
+<br>
+ <li>In 2018, what will be the maximum amount of <abbr title="Canada Pension Plan">CPP</abbr> contributions you can deduct from an employee's pay?</li>
+ <ul>
+			<li><b>$2593.80</b></li>
+ </ul>
+<br>
+ <li>You have recently registered for a <abbr title="Goods and Services Tax">GST</abbr> account and have been collecting <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr>. How would you find out when you have to pay it?</li>
+ <ul>
+		 <li><b>You need to look at your GST34-2 OR One month after the reporting period (Quarterly)</b></li>
+ </ul>
+<br>
+ <li>Your business operates seasonally, so you don't pay employees during the winter. Do you need to let <abbr title="Canada Revenue Agency">CRA</abbr> know this?</li>
+ <ul>
+		 <li><b>Yes</b></li>
+ </ul>
+</ol>
+
 
 <p>We used remote moderated testing on desktop and laptop computers to establish the baseline. We tested 17 participants from across Canada (14 English and 3 French). We recruited owners of small businesses, screening for those who were self-employed or sole proprietors, without prior <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> or payroll experience.</p>
 
