--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -394,13 +394,13 @@
 																	<li class="custli">Vous avez envoyé un chèque par la poste pour payer les retenues sur la paie de votre compagnie. Comment pourriez-vous confirmer que Revenu Canada l'a reçu?</li>
 																	<li class="custli">Vous vous êtes inscrits à la <abbr title="taxe sur les produits et services">TPS</abbr> pour la première fois le 31 août, et vous ferez votre déclaration à chaque année. Votre fin d'année financière est terminé le 31 octobre. De ce lapse de temps, votre taxe nette était $2500. Pour la prochaine année financière, devez-vous payer la <abbr title="taxe sur les produits et services">TPS</abbr> en versements par acomptes provisionnels?</li>
 
-																	<li>
+																	<li class="custli">
 																 Une entreprise perçoit des retenues sur la paie de ses employés. Elle envoie les retenues perçues au gouvernement quatre fois l’an. Quand doit-elle envoyer le prochain paiement?
 																 </li>
 
-																	 <li>En 2018, quel sera le montant maximal des cotisations au <abbr title="Régime de pensions du Canada">RPC</abbr> que vous pourrez déduire de la paie d’un employé?</li>
+																	 <li class="custli">En 2018, quel sera le montant maximal des cotisations au <abbr title="Régime de pensions du Canada">RPC</abbr> que vous pourrez déduire de la paie d’un employé?</li>
 
-																	 <li>Vous avez récemment inscrit votre entreprise à un compte de <abbr title="taxe sur les produits et services">TPS</abbr> et vous percevez la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Comment saurez-vous à quel moment payer?</li>
+																	 <li class="custli">Vous avez récemment inscrit votre entreprise à un compte de <abbr title="taxe sur les produits et services">TPS</abbr> et vous percevez la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Comment saurez-vous à quel moment payer?</li>
 
 																	<li class="custli">Vous avez une entreprise saisonnière, et donc vous ne payez pas vos employés durant l'hiver. Devez-vous informer Revenu Canada de ce détail?</li>
 																						</ul>
