--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -387,12 +387,12 @@
 																						<div>
 
 																	<ul class="custul">
-																	<li class="custli">Pouvez-vous payer les retenues sur la paie de votre compagnie (y compris les retenues pour le Régime de pensions du Canada et les retenues des Assurances-Emploi) par Interac?</li>
-																	<li class="custli">Vous avez émis une facture pour vos services, incluant la <abbr title="taxe sur les produits et services">TPS</abbr>, le jour avant de faire votre déclaration. Pouvez-vous attendre que la facture soit payée avant d'envoyer votre paiement?</li>
-																	<li class="custli">Par accident, vous avez fait une erreur en soumettant votre dernière déclaration de retenus sur la paie. Vous avez sous-payé vos retenus à la source par $350. Recevrez-vous une amende?</li>
-																	<li class="custli">Si votre compagnie en Ontario vend et livre un produit taxable à un client en Alberta, facturez-vous la <abbr title="taxe sur les produits et services">TPS</abbr>, ou la <abbr title="taxe de vente harmonisée">TVH</abbr>?</li>
-																	<li class="custli">Vous avez envoyé un chèque par la poste pour payer les retenues sur la paie de votre compagnie. Comment pourriez-vous confirmer que Revenu Canada l'a reçu?</li>
-																	<li class="custli">Vous vous êtes inscrits à la <abbr title="taxe sur les produits et services">TPS</abbr> pour la première fois le 31 août, et vous ferez votre déclaration à chaque année. Votre fin d'année financière est terminé le 31 octobre. De ce lapse de temps, votre taxe nette était $2500. Pour la prochaine année financière, devez-vous payer la <abbr title="taxe sur les produits et services">TPS</abbr> en versements par acomptes provisionnels?</li>
+																	<li class="custli">Pouvez-vous payer les retenues de votre entreprise pour le <abbr title="Régime de pensions du Canada">RPC</abbr> et l’<abbr title="assurance-emploi">AE</abbr> à l’<abbr title="Agence du revenu du Canada">ARC</abbr> au moyen d’Interac?</li>
+																	<li class="custli">Vous avez produit une facture incluant la <abbr title="taxe sur les produits et services">TPS</abbr> le dernier jour du trimestre. Pouvez-vous attendre que la facture soit payée avant d’envoyer votre paiement?</li>
+																	<li class="custli">Vous avez accidentellement fait une erreur lorsque vous avez transmis votre dernière déclaration de retenues sur la paie. Vous avez sous-payé les retenues à la source à l’<abbr title="Agence du revenu du Canada">ARC</abbr> de 350 $. Va-t-on vous imposer une amende?</li>
+																	<li class="custli">Si votre entreprise ontarienne vend et expédie un produit imposable à un client de l’Alberta, vous faut-il lui facturer la <abbr title="taxe sur les produits et services">TPS</abbr> ou la <abbr title="taxe de vente harmonisée">TVH</abbr>?</li>
+																	<li class="custli">Vous avez posté un chèque pour payer les retenues sur la paie pour votre entreprise. Comment pouvez-vous confirmer que l’<abbr title="Agence du revenu du Canada">ARC</abbr> l’a reçu?</li>
+																	<li class="custli">Vous avez inscrit votre entreprise à la <abbr title="taxe sur les produits et services">TPS</abbr> pour la première fois le 31 août et vous produirez une déclaration chaque année. L’exercice financier s’est terminé le 31 octobre. Les taxes nettes en septembre et octobre étaient de 2 500 $. Devrez-vous payer la <abbr title="taxe sur les produits et services">TPS</abbr> en versements échelonnés au prochain exercice?</li>
 
 																	<li class="custli">
 																 Une entreprise perçoit des retenues sur la paie de ses employés. Elle envoie les retenues perçues au gouvernement quatre fois l’an. Quand doit-elle envoyer le prochain paiement?
@@ -402,7 +402,7 @@
 
 																	 <li class="custli">Vous avez récemment inscrit votre entreprise à un compte de <abbr title="taxe sur les produits et services">TPS</abbr> et vous percevez la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr>. Comment saurez-vous à quel moment payer?</li>
 
-																	<li class="custli">Vous avez une entreprise saisonnière, et donc vous ne payez pas vos employés durant l'hiver. Devez-vous informer Revenu Canada de ce détail?</li>
+																	<li class="custli">Votre entreprise fonctionne de façon saisonnière, de sorte que vous ne payez pas les employés pendant l’hiver. Devez-vous en informer l’<abbr title="Agence du revenu du Canada">ARC</abbr>?</li>
 																						</ul>
 
 																						<br>
