--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -176,14 +176,14 @@ Detailed description
 <br>
 <p>We also found that people who were not familiar with tax rules did not always grasp the term “remit”. They often skipped over links to pages with that content. We could not completely replace the term remit, since it has legal connotations. Instead, we chose to bridge citizen and technical terminology by using both “pay” and “remit” in links and page titles.</p>
 
-<h2 id="measuring-success-rates-on-the-redesigned-prototype">Measuring success rates on the redesigned prototype</h2>
+<h2>Measuring success rates on the redesigned prototype</h2>
 
 <p>Once the revised design was ready, 25 new participants were recruited to complete the same 10 tasks. We used the same methods as the baseline test to ensure the tests could be directly compared. Our target was either 80% success, or an improvement of at least 20% points over the baseline score. </p>
 
 <p>Findability rates for the revised content rose from 62% up to 90% (+28% points). Task success rates rose from 48% to 76% (+28% points).</p>
 
 </div>
-</div>
+
 <img class="img-responsive hidden-sm hidden-xs" alt="image-of-chart-showing-baseline-and-final-test-results" src="../images/taxes-impots/CRA-TF-task-success-chart.jpg"/>
 
 <div class="row col-md-9">
@@ -230,7 +230,8 @@ Detailed description
 				<td  >47%</td>
 				<td>100%</td>
 			</tr>
-			</tbody></table>
+			</tbody>
+		</table>
 		<p>42 total participants	 </p>
 			 </details>
 
