--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -183,7 +183,8 @@ Detailed description
 <p>Findability rates for the revised content rose from 62% up to 90% (+28% points). Task success rates rose from 48% to 76% (+28% points).</p>
 
 </div>
-
+</div>
+<div>
 <img class="img-responsive hidden-sm hidden-xs" alt="image-of-chart-showing-baseline-and-final-test-results" src="../images/taxes-impots/CRA-TF-task-success-chart.jpg"/>
 
 <div class="row col-md-9">
