--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -158,6 +158,7 @@ A business collects taxes from its employees’ pay. It sends the taxes it has c
 <figure>
 <img class="img-responsive" alt="Web screen capture showing the “How and when to remit source deductions” page before and after redesign. Detailed description follows." src="../images/taxes-impots/beforeafter-sourcedeductions.jpg"/>
 <figcaption><small>How and when to remit source deductions page at baseline and after redesign for validation </small></figcaption>
+</figure>
 <br>
 
 
