--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -191,6 +191,7 @@ Detailed description
 
 <div class="row col-md-9">
 <details>
+	<details>
 			 <summary>
 			  Task completion success rates – table
 			 </summary>
