--- a/research-summaries/taxfiling-research-summary.html
+++ b/research-summaries/taxfiling-research-summary.html
@@ -187,10 +187,9 @@ Detailed description
 </div>
 </div>
 <div>
-<img class="img-responsive hidden-sm hidden-xs" alt="image-of-chart-showing-baseline-and-final-test-results" src="../images/taxes-impots/CRA-TF-task-success-chart.jpg"/>
+<img class="img-responsive hidden-sm hidden-xs" alt="Bar graph comparing the task success rates on the live site (baseline) and the redesigned prototype (validation) for all 6 tasks. Data for each task is in the table below. The graph shows that participants had higher success rates for every task in the validation testing." src="../images/taxes-impots/CRA-TF-task-success-chart.jpg"/>
 
 <div class="row col-md-9">
-<details>
 	<details>
 			 <summary>
 			  Task completion success rates – table
