--- a/research-summaries/impots-resume-researche.html
+++ b/research-summaries/impots-resume-researche.html
@@ -163,6 +163,7 @@ Une entreprise perçoit des retenues sur la paie de ses employés. Elle envoie l
 <figure>
 <img class="img-responsive" alt="Saisie d’écran Web montrant la page « Comment et quand faire les versements de retenues à la source » avant et après le remaniement. La description détaillée suit." src="../images/taxes-impots/beforeafter-sourcedeductions-FR.jpg"/>
 <figcaption><small>Page « Comment et quand faire les versements de retenues à la source » avant et après le remaniement aux fins de validation (en anglais)</small></figcaption>
+</figure>
 <br>
 
 
@@ -285,9 +286,7 @@ Description détaillée
 
   </div>
 
-</article>
-</div>
-
+<div class="clearfix"></div>
 <div id="def-preFooter">
 </div>
 <!-- Write closure template -->
