--- a/research-summaries/impots-resume-researche.html
+++ b/research-summaries/impots-resume-researche.html
@@ -151,7 +151,7 @@ Une entreprise perçoit des retenues sur la paie de ses employés. Elle envoie l
 <p>Les résultats des premiers tests ont montré que, en moyenne, les participants ont pu trouver les renseignements dans une proportion de 62 %. Cependant, ils ont réussi à compléter les tâches avec succès seulement dans une proportion de 48 %. </p>
 
 
-<h2 id="">Restructuration visant à améliorer le taux de réussite des tâches</h2>
+<h2>Restructuration visant à améliorer le taux de réussite des tâches</h2>
 
 <p>Pour la phase des prototypes, nous avons divisé en deux équipes de travail, l’une pour les tâches liées à la <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et l’autre pour les tâches liées aux retenues sur la paie. Chaque équipe a passé en revue le rapport des tests initiaux, regardé d’autres vidéos de participants qui tentaient d’accomplir des tâches, et examiné la navigation associée aux clics, c’est-à-dire les séquences de pages que les participants ont visitées. Cela a aidé à montrer quelles pages poussaient les personnes à s’écarter de la voie « idéale ». Parfois, nous l'avons fait parce que le bon lien n’était pas suffisamment évident. À d'autres moments, un autre lien était plus attrayant.
 
