--- a/research-summaries/impots-resume-researche.html
+++ b/research-summaries/impots-resume-researche.html
@@ -240,7 +240,9 @@ Description détaillée
 				<td  >47 %</td>
 				<td>100 %</td>
 			</tr>
-			</tbody></table>
+			</tbody>
+		</table>
+	</div>	
 		<p>42 participants au total	 </p>
 			 </details>
 
